Implimented missing SimpleAuthServProv

--- a/OAuthTutorial/OAuthTutorial.csproj
+++ b/OAuthTutorial/OAuthTutorial.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Controllers\OrdersController.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpleAuthorizationServerProvider.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
