--- a/VSCode/package.json
+++ b/VSCode/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "deploy": "surge ./public --domain vscode.bdiboll.surge.sh",
-    "start": "browser-sync start --server 'public' --files 'public'"
+    "start": "browser-sync start --server --startPath public --files public"
   },
   "dependencies": {
     "browser-sync": "^2.24.2",
