--- a/VisualStudios/OAuthTutorial/OAuthTutorial.csproj
+++ b/VisualStudios/OAuthTutorial/OAuthTutorial.csproj
@@ -131,6 +131,7 @@
     <Compile Include="AuthRepository.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\OrdersController.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Contact.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
