Added initial db migration

--- a/VisualStudios/OAuthTutorial/OAuthTutorial.csproj
+++ b/VisualStudios/OAuthTutorial/OAuthTutorial.csproj
@@ -131,6 +131,10 @@
     <Compile Include="AuthRepository.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\OrdersController.cs" />
+    <Compile Include="Migrations\201805021833003_Initial.cs" />
+    <Compile Include="Migrations\201805021833003_Initial.Designer.cs">
+      <DependentUpon>201805021833003_Initial.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Contact.cs" />
     <Compile Include="Models\UserModel.cs" />
@@ -149,6 +153,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201805021833003_Initial.resx">
+      <DependentUpon>201805021833003_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
